--- a/app/webroot/css/geral.css
+++ b/app/webroot/css/geral.css
@@ -6,3 +6,13 @@
 	display: inline-block;
 	font-size: 18px;
 }
+
+.date div {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.InputDate select {
+	width: 30%;
+	float: left;
+}
